<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="photo_page">PhotoPage</string>
    <string name="gallery_photo">Gallery Photo</string>
    <string name="search">Search</string>
    <string name="clear_search">Clear Search</string>
    <string name="notification_channel_name">FlickrFetchr</string>
    <string name="new_pictures_title">New Pictures</string>
    <string name="new_pictures_text">Check out these newly fetched pictures.</string>
    <string name="start_polling">Start polling</string>
    <string name="stop_polling">Stop polling</string>
    <string name="settings">Settings</string>
    <string name="custom_view">Custom View</string>
    <string name="web_view">WebView</string>
    <string name="browser_app">Browser app</string>
    <string name="browser_type">Browser Type</string>
    <string name="roland">Roland</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share_link">Share link…</string>
    <string name="share_link_subject">Photo link</string>
    <string name="link">%1s</string>
    <string name="history">History</string>
    <string name="cancel">Cancel</string>
    <string name="clear_history">Clear</string>
    <string name="string_history">Rising sun shine</string>
    <string name="remove_history">Remove history</string>
    <string name="no_new_pic">No new pictures yet!</string>
    <string name="linear_layout">LinearLayout</string>
    <string name="history_cleared">History cleared</string>
    <string name="no_photos_found">Oops… No photos found!</string>
</resources>