<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/menu_item_clear"
        android:title="@string/clear_search"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_toggle_polling"
        android:title="@string/start_polling"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/layout_switch"
        android:checkable="true"
        android:title="@string/linear_layout"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_item_history"
        android:title="@string/history"
        app:showAsAction="never" />

</menu>