<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="1000dp">

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="30dp"
        android:gravity="center"
        android:text="@string/history"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/history_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/history_recycler_view"
        app:layout_constraintStart_toStartOf="@id/history_recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/history" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/history_recycler_view"
        android:layout_width="335dp"
        android:layout_height="590dp"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="?android:attr/fastScrollThumbDrawable"
        app:fastScrollHorizontalTrackDrawable="?android:attr/fastScrollTrackDrawable"
        app:fastScrollVerticalThumbDrawable="?android:attr/fastScrollThumbDrawable"
        app:fastScrollVerticalTrackDrawable="?android:attr/fastScrollTrackDrawable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_divider"
        tools:listitem="@layout/history_list" />

    <View
        android:id="@+id/history_divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/history_recycler_view"
        app:layout_constraintStart_toStartOf="@id/history_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/history_recycler_view" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/purple_300"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/clear_history"
        app:layout_constraintTop_toBottomOf="@id/history_divider2" />

    <TextView
        android:id="@+id/clear_history"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/clear_history"
        android:textAllCaps="true"
        android:textColor="@color/purple_300"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>